# llm-observability

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
app/: dashboard.py
src/llmobs/: __init__.py  cli.py  config.py  demo_app.py  evals.py  metrics.py  providers.py  store.py  tracer.py
tests/: test_llmobs.py
