[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmobs"
version = "0.1.0"
description = "Lightweight observability + tracing for LLM apps: per-request spans (prompt, tokens, latency, cost), online quality evals, and a drill-down dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llmops", "observability", "tracing", "llm-monitoring", "evaluation", "claude", "anthropic"]
authors = [{ name = "Taimoor Karim" }]

# Core is stdlib + sqlite — no third-party deps to trace and store.
dependencies = []

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]
dashboard = ["streamlit>=1.33"]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]
all = ["llmobs[serve,dashboard,claude,dev]"]

[project.scripts]
llmobs = "llmobs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llmobs"]
